--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" src="demo.js"></script>
 </head>
 <body ng-controller="Controller">
-	<div ace-editor ng-model="test" ng-change="change()"></div>
+	<div ace-editor="aceOptions" ng-model="test" ng-change="change()"></div>
 </body>
 <style type="text/css">
 	div{
